--- a/build.gradle
+++ b/build.gradle
@@ -15,5 +15,7 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
+
+        maven { url 'https://github.com/JanChvala/janchvala-mvn-repo/raw/master/releases' }
     }
 }
